--- a/Code/assets/css/StyleSheet.css
+++ b/Code/assets/css/StyleSheet.css
@@ -1,3 +1,124 @@
-﻿body
-{
+﻿body {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    color: white;
+}
+
+
+ul > li {
+    margin: 5px 0px 9px;
+}
+
+
+li:nth-child(2) {
+    color: aquamarine;
+    letter-spacing: 0.3em;
+}
+
+
+td {
+    width: 41px;
+    height: 31px;
+    border: solid 1px silver;
+    text-align: center;
+    vertical-align: bottom;
+}
+
+
+p:last-child {
+    margin-top: 10px;
+    padding-bottom: 0px;
+}
+
+
+
+
+
+ /*  ---  classes  ---  */
+
+
+.header, .footer {
+    background-color: green;
+    text-align: center;
+    padding: 10px;
+}
+
+
+.header {
+    font-family: Courier;
+}
+
+
+.main_block {
+    margin: auto;
+    background-color: blue;
+    max-width: 26.5%;
+    min-width: 320px;
+    padding: 15px 20px 1px 20px;
+    text-align: center;
+}
+
+
+.content_h1 {
+    margin: 0px 5px;
+    padding-top: 5px;
+    text-align: left;
+}
+
+
+.square {
+    width: 100px;
+    height: 100px;
+    content: none;
+    float: left;
+    border: 5px white solid;
+    margin: 20px 21px 20px 5px;
+    border-radius: 15px 0px 25px 0px;
+}
+
+
+.text_content {
+    text-align:left;
+    margin: 20px 0px 10px;
+}
+
+
+.href {
+    color: red;
+}
+
+
+.href:hover {
+    color:orange;
+    text-decoration:none;
+}
+
+
+.content {
+    text-align: left;
+}
+
+
+.content_h2 {
+    margin: 10px 0px 0px;
+    word-spacing: 10px;
+}
+
+
+.asi {
+    float: right;
+    padding-top: 6px;
+}
+
+
+.icon {
+    margin:11px 0px;
+    float:right;
+}
+
+
+.styles {
+    margin: 0px;
+    padding-bottom: 10px;
 }
