--- a/Code/assets/css/StyleSheet.css
+++ b/Code/assets/css/StyleSheet.css
@@ -1,3 +1,90 @@
-﻿body
-{
+﻿body {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+}
+
+
+h1 {
+    text-align:center;
+    margin-top: 0;
+}
+
+
+h3 {
+    margin:0;
+}
+
+
+.news_block {
+    margin: 0 auto;
+    width: 900px;
+    background-color: aqua;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+
+.news_content {
+    padding: 20px;
+}
+
+
+.news_content:hover {
+    transition: 0.3s;
+    background-color: #ff5555;
+}
+
+
+p {
+    margin: 10px 0;
+}
+
+
+button {
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background: linear-gradient(#00fc00, #008900);
+    color: white;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    border: 0;
+    border-radius: 4px;
+    padding: 8px;
+}
+
+
+button:hover {
+    background: linear-gradient(#008900, #00fc00);
+}
+
+
+hr {
+    margin: 0;
+    border: none;
+    color: black;
+    background-color: black;
+    height: 2px;
+}
+
+
+.news_full {
+    display: none;
+    background-color: #e1ff73;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    padding: 20px;
+    z-index: 5;
+}
+
+
+.transparent_block {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    display: none;
 }
