--- a/Code/assets/css/StyleSheet.css
+++ b/Code/assets/css/StyleSheet.css
@@ -1,3 +1,58 @@
-﻿body
-{
+﻿body {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+}
+
+
+main {
+    margin: auto;
+    width: 800px;
+}
+
+
+nav {
+    display:flex;
+}
+
+
+button {
+    font-size: 20px;
+    margin: 0;
+    width: 100%;
+    color: white;
+    background-color: red;
+    border: 2px solid black;
+    padding: 10px;
+}
+
+
+button:hover {
+    background: linear-gradient(darkred, red);
+}
+
+
+.imgs_box {
+    display: flex;
+    height: 400px;
+}
+
+
+#blue {
+    padding: 10px;
+    flex: none;
+    background-color: blue;
+}
+
+
+#green {
+    padding: 10px;
+    flex: none;
+    background-color: green;
+}
+
+
+img {
+    width: 380px;
+    height: 380px;
 }
